--- a/website/package.json
+++ b/website/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@solidjs/router": "^0.13.1",
     "@supabase/supabase-js": "^2.42.3",
+    "chart.js": "^4.4.3",
     "solid-js": "^1.8.15"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
